# DutchGPT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
archived_projects/llm_from_scratch/: README.md  requirements.txt
archived_projects/llm_from_scratch/notebooks/: model_init.ipynb
notebooks/: model_init.ipynb  text.ipynb
src/: GEMMA.py  continue_training.py  convert_legal_cases.py  convert_new_gen.py  ev_models.py  inference.py  llama3b.py  model_init.py  train.py  translation_nemotron.py
src/data/legal_cases/: convert_legal_cases.py
src/data/nemotron/: convert_nemotron_after_translation.py  preprocess_nemotron.py  translation_nemotron.py
src/data/newly_generated/: convert_new_gen.py  generating_gemini.py
src/finetuning/: GEMMA.py  llama3b.py
src/nemotron/: convert_nemotron_after_translation.py
